@@ -1,3 +1,8 @@
+2007-01-22  Konstantin Triger <kostat@mainsoft.com>
+
+	* Page.cs, ClientScriptManager.cs: ensure the web form client script is
+		registerd before the client script includes are rendered.
+
 2007-01-21  Konstantin Triger <kostat@mainsoft.com>
 
 	* Page.cs: move the WriteClientScriptIncludes to the top of the form,
